# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.9 2004/12/18 23:51:21 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  18 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Added Load/Save buttons and images (don't do anything yet).

  12 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Completed rough working NetworkMounts screen: adds/removes/updates entries
  and saves to/reads from install profile. Moved some duplicated code into
  [enable|disable]_all_fields() functions. "fixed" the problem with the GTK
  assertion when calling set_text_column(0).

  12 Dec 2004; John Laliberte <allanonl@bu.edu>
  Networking.py updated to check ips while you type, as well as disabling
  the dropdown if any of the ip's are faulty.  This version turns the
  background of the gtk.Entry to "pink" until a valid ip address is found.
  Timezone.py updated to include the function generate_timezones which had
  previously been put in GLIUtility. Networking.py code has been
  overhauled/cleaned up to reflect the growing complexity of the panel.

  11 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Initial ChangeLog commit. Added set_size_request() call in gtkfe.py so the
  width of the left frame doesn't shift. Incorporated screen updates from
  John Laliberte <allanonl@bu.edu> (AllanonJL in #gentoo-installer). Added
  functionality to NetworkMounts.py to list NFS exports on a particular host.
