@@ -11,6 +11,7 @@ class Panel(GLIScreen.GLIScreen):
 	columns = []
 	netmounts = []
 	active_entry = -1
+	mount_types = ["NFS"]
 
 	def __init__(self, controller):
 		GLIScreen.GLIScreen.__init__(self, controller)
@@ -35,35 +36,43 @@ class Panel(GLIScreen.GLIScreen):
 			self.treeview.append_column(column)
 			col_num += 1
 		self.treewindow = gtk.ScrolledWindow()
-		self.treewindow.set_size_request(-1, 100)
+		self.treewindow.set_size_request(-1, 200)
+		self.treewindow.set_shadow_type(gtk.SHADOW_IN)
 		self.treewindow.set_policy(gtk.POLICY_AUTOMATIC, gtk.POLICY_AUTOMATIC)
 		self.treewindow.add(self.treeview)
 		vert.pack_start(self.treewindow, expand=gtk.FALSE, fill=gtk.FALSE, padding=0)
 
 		self.mount_info_box = gtk.HBox(gtk.FALSE, 0)
-		mount_info_table = gtk.Table(5, 2, gtk.FALSE)
+		mount_info_table = gtk.Table(5, 3, gtk.FALSE)
 		mount_info_table.set_col_spacings(10)
 		mount_info_table.set_row_spacings(6)
-		mount_info_host_label = gtk.Label("Host/IP:")
-		mount_info_host_label.set_alignment(0.0, 0.5)
-		mount_info_table.attach(mount_info_host_label, 0, 1, 0, 1)
-		self.mount_info_host = gtk.Entry()
-		self.mount_info_host.set_width_chars(25)
-		mount_info_table.attach(self.mount_info_host, 1, 2, 0, 1)
-		mount_info_export_label = gtk.Label("Export/Share:")
-		mount_info_export_label.set_alignment(0.0, 0.5)
-		mount_info_table.attach(mount_info_export_label, 0, 1, 1, 2)
-		self.mount_info_export = gtk.ComboBoxEntry(gtk.ListStore(gobject.TYPE_STRING))
-		self.mount_info_export.get_child().connect("focus-in-event", self.populate_exports)
-		if not self.mount_info_export.get_text_column() == 0:
-			self.mount_info_export.set_text_column(0)
-		mount_info_table.attach(self.mount_info_export, 1, 2, 1, 2)
 		mount_info_type_label = gtk.Label("Type:")
 		mount_info_type_label.set_alignment(0.0, 0.5)
-		mount_info_table.attach(mount_info_type_label, 0, 1, 2, 3)
-		self.mount_info_type = gtk.Entry()
-		self.mount_info_type.set_width_chars(30)
-		mount_info_table.attach(self.mount_info_type, 1, 2, 2, 3)
+		mount_info_table.attach(mount_info_type_label, 0, 1, 0, 1)
+		self.mount_info_type = gtk.combo_box_new_text()
+		for mount_type in self.mount_types:
+			self.mount_info_type.append_text(mount_type)
+		self.mount_info_type.set_active(0)
+		mount_info_table.attach(self.mount_info_type, 1, 2, 0, 1)
+		mount_info_host_label = gtk.Label("Host/IP:")
+		mount_info_host_label.set_alignment(0.0, 0.5)
+		mount_info_table.attach(mount_info_host_label, 0, 1, 1, 2)
+		self.mount_info_host = gtk.Entry()
+		self.mount_info_host.set_width_chars(25)
+		mount_info_table.attach(self.mount_info_host, 1, 2, 1, 2)
+		mount_info_export_label = gtk.Label("Export/Share:")
+		mount_info_export_label.set_alignment(0.0, 0.5)
+		mount_info_table.attach(mount_info_export_label, 0, 1, 2, 3)
+		self.mount_info_export = gtk.ComboBoxEntry(gtk.ListStore(gobject.TYPE_STRING))
+		if not self.mount_info_export.get_text_column() == 0:
+			self.mount_info_export.set_text_column(0)
+		mount_info_table.attach(self.mount_info_export, 1, 2, 2, 3)
+		self.mount_info_export_refresh = gtk.Button()
+		mount_info_export_refresh_img = gtk.Image()
+		mount_info_export_refresh_img.set_from_file(self.full_path + '/button_images/stock_refresh.png')
+		self.mount_info_export_refresh.add(mount_info_export_refresh_img)
+		self.mount_info_export_refresh.connect("clicked", self.populate_exports)
+		mount_info_table.attach(self.mount_info_export_refresh, 2, 3, 2, 3)
 		mount_info_mountpoint_label = gtk.Label("Mount point:")
 		mount_info_mountpoint_label.set_alignment(0.0, 0.5)
 		mount_info_table.attach(mount_info_mountpoint_label, 0, 1, 3, 4)
@@ -103,11 +112,12 @@ class Panel(GLIScreen.GLIScreen):
 		self.mount_info_host.set_text("")
 		self.mount_info_export.get_child().set_text("")
 		self.mount_info_export.set_model(gtk.ListStore(gobject.TYPE_STRING))
-		self.mount_info_type.set_text("")
+#		self.mount_info_type.set_text("")
 		self.mount_info_mountpoint.set_text("")
 		self.mount_info_mountopts.set_text("")
 		self.mount_info_host.set_sensitive(gtk.FALSE)
 		self.mount_info_export.set_sensitive(gtk.FALSE)
+		self.mount_info_export_refresh.set_sensitive(gtk.FALSE)
 		self.mount_info_type.set_sensitive(gtk.FALSE)
 		self.mount_info_mountpoint.set_sensitive(gtk.FALSE)
 		self.mount_info_mountopts.set_sensitive(gtk.FALSE)
@@ -116,11 +126,12 @@ class Panel(GLIScreen.GLIScreen):
 		self.mount_info_host.set_text("")
 		self.mount_info_export.get_child().set_text("")
 		self.mount_info_export.set_model(gtk.ListStore(gobject.TYPE_STRING))
-		self.mount_info_type.set_text("")
+#		self.mount_info_type.set_text("")
 		self.mount_info_mountpoint.set_text("")
 		self.mount_info_mountopts.set_text("")
 		self.mount_info_host.set_sensitive(gtk.TRUE)
 		self.mount_info_export.set_sensitive(gtk.TRUE)
+		self.mount_info_export_refresh.set_sensitive(gtk.TRUE)
 		self.mount_info_type.set_sensitive(gtk.TRUE)
 		self.mount_info_mountpoint.set_sensitive(gtk.TRUE)
 		self.mount_info_mountopts.set_sensitive(gtk.TRUE)
