@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.9 2004/12/18 23:51:21 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.10 2004/12/19 03:18:30 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   18 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
-  Added Load/Save buttons and images (don't do anything yet).
+  Added Load/Save buttons and images (don't do anything yet). Reordered
+  fields in NetworkMounts and added button next to Export ComboBox.
 
   12 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Completed rough working NetworkMounts screen: adds/removes/updates entries
